@startuml
title Update Partner Settings - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class PartnerProfile <<model>> {
  -id: String {UUID}
  -userId: String {unique}
  -bankName: String [0..1]
  -bankAccountNumber: String [0..1]
  -website: String [0..1]
  -description: String [0..1]
  -status: PartnerStatus = PENDING
  --
  +updatePayoutInfo(bankName: String, bankAccountNumber: String): void
  +isApproved(): Boolean
}

class User <<model>> {
  -id: String {UUID}
  -employerPartnerId: String [0..1]
  -email: String {unique}
  -status: UserStatus = ACTIVE
  --
  +isVerified(): Boolean
  +isActive(): Boolean
}

class UserProfile <<model>> {
  -id: String {UUID}
  -userId: String {unique}
  -phoneNumber: String [0..1]
  -avatarUrl: String [0..1]
  --
  +updateContactInfo(phoneNumber: String): void
  +isComplete(): Boolean
}

User "1" *-- "0..1" PartnerProfile : partnerProfile
PartnerProfile "0..1" -- "0..*" User : staffMembers
User "1" *-- "0..1" UserProfile : profile

@enduml
